// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`do...while 1`] = `
"<script setup lang="ts">
let result = "";
let i = 0;

do {
  i = i + 1;
  result = result + i;
} while (i < 5);
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        let result = '';
        let i = 0;

        do {
          i = i + 1;
          result = result + i;
        } while (i < 5);
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`while 1`] = `
"<script setup lang="ts">
let n = 0;

while (n < 3) {
  n++;
}
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        let n = 0;

        while (n < 3) {
          n++;
        }
      }
    "
  >
    Click Me
  </button>
</template>
"
`;
